# infini

./: .gitignore  .pdm-python  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html  main.py  main.spec  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt  requirements_mkdocs.txt  runtime.txt  setup.cfg  setup.py  test.py  versions.json
.cache/plugin/git-committers/: page-authors.json
.github/: release-drafter.yml
.github/workflows/: changelog.yml  codeql.yml  pack.yml  pages.yml  python-publish.yml
API/: index.html
Core/: index.html
HydroRollCore/: __init__.py  cli.py  main.html  rule.py
RulePackage/Structure/attribute/: index.html
RulePackage/Structure/class/: index.html
RulePackage/Structure/method/: index.html
RulePackage/Write/prepare/: index.html
RulePackage/Write/python/: index.html
RulePackage/Write/write/: index.html
Standard/Term/DefaultDice/: index.html
Standard/Term/PlayerCard/: index.html
Standard/Term/check/: index.html
Standard/Term/duration/: index.html
Standard/Term/scenario/: index.html
Standard/Term/setting/: index.html
Standard/what-is-rule-package/: index.html
Standard/what-is-standard/: index.html
Standard/why-rule-package/: index.html
blog/: index.html
dev/: 404.html  index.html
dev/API/: index.html
dev/CLI/: index.html
dev/Core/: index.html
dev/Help/PythonSkill/: index.html
dev/Help/TermList/: index.html
dev/Help/emoji/: index.html
dev/RulePackage/intro/: index.html
dev/RulePackage/skill/: index.html
dev/Standard/what-is-rule-package/: index.html
dev/Standard/what-is-standard/: index.html
dev/Standard/why-rule-package/: index.html
dev/assets/stylesheets/: custom.00c04c01.min.css
dev/blog/: index.html
dev/changelog/: index.html
dev/search/: search_index.json
docs/: 1.1.1  CNAME  index.md  mkdocs.yml  requirements.txt
docs/CLI/: index.md
docs/Core/: index.md
docs/Help/: TermList.md  emoji.md
docs/RulePackage/: intro.md
docs/RulePackage/getStart/: attribute.md  class.md  method.md
docs/RulePackage/skill/: fstring.md
docs/Standard/: what-is-rule-package.md
docs/Standard/Term/: dice-count.md  dice-face.md
docs/blog/: .authors.yml
docs/docs/: index.md
docs/overrides/: home.html  main.html
docs/site/: 404.html  index.html
docs/source/: changelog.md  conf.py  index.md  quick-start.md
docs/src/: .gitignore  test.py
docs/stylesheets/: extra.css
examples/: rule-singlefile.py
hydrorollcore/: __init__.py  main.py
latest/: 404.html  index.html
latest/CLI/: index.html
latest/Core/: index.html
latest/blog/: index.html
latest/changelog/: index.html
latest/search/: search_index.json
latest/stylesheets/: extra.css
material/overrides/: main.html
overrides/: main.html
retro_pkg_test/: __init__.py
search/: search_index.json
src/: test.py
src/hydrorollcore/: __init__.py  cli.py  config.py  core.py  event.py  exceptions.py  log.py  logging.py  manager.py  rule.py  typing.py  utils.py
src/infini/: __init__.py  __main__.py  const.py  core.py  doc.py  event.py  exceptions.py  generator.py  handler.py  injector.py  input.py  interceptor.py  internal.py  loader.py  logging.py  manager.py  matcher.py  output.py  queue.py  register.py  router.py  typing.py
tests/: test_core.py  test_generator.py  test_handlers.py  test_injector.py  test_input.py  test_interceptor.py  test_loader.py  test_register.py
tests/MyRule/: config.toml  core.py
tests/TestRulePackage/: event.py  handler.py  tests.py
tests/reportlab/: 1.1.py
v0.1/API/: index.html
v0.1/CLI/: index.html
v1.0/: index.html
v1.0/API/: index.html
v1.0/CLI/: index.html
v1.0/Core/: index.html
v1.0/blog/: index.html
v1.0/changelog/: index.html
v1.0/search/: search_index.json
(+151 files in other folders)
