[project]
name = "infini"
version = "2.0.0-alpha.1"
description = "Infini 核心标准文本输入输出模块"
authors = [
    { name = "简律纯", email = "leader@hydroroll.team" },
    { name = "苏向夜", email = "fu050409@163.com" },
]
dependencies = [
    "pydantic",
    "multilogging",
    "rich>=13.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
