[project]
name = "infini"
version = "2.1.5"
description = "Infini 内容输入输出流框架"
authors = [
    { name = "苏向夜", email = "fu050409@163.com" },
    { name = "简律纯", email = "leader@hydroroll.team" },
]
dependencies = [
    "rich>=13.7.0",
    "jinja2>=3.1.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://grps.hydroroll.team"
Documentation = "https://grps.hydroroll.team"
Repository = "https://github.com/HydroRoll-Team/infini"
Changelog = "https://infini.hydroroll.team/zh_CN/latest/changelog.html"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
    "ipdm>=0.1.4",
]
tests = [
    "multilogging>=1.0.2",
]
