[metadata]
name = retro_pkg_test
version = 3.1415
author = 简律纯
author_email = HsiangNianian@outlook.com
description = A test pkg for retro.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/retrofor/retro_pkg_test
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
