[metadata]
name = hydrorollcore
version = 0.1.1
author = 简律纯
author_email = i@jyunko.cn
description = Core of HydroRoll.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HydoRoll-Team/HydroRollCore
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

install_requires =
    tkinter
    
[options.entry_points]
console_scripts =
    HydroRoll = HydroRoll.__init__:main
